sdoとsdoredを分ける

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,13 @@
-[RemoveUnnecessaryImages]
-IMG_DIR = /Volumes/Extreme SSD/tmp_sdo_red/
-OUT_DIR = /Volumes/Extreme SSD/sdo_red/
+[SDO]
+IMG_DIR = /Volumes/Transcend/img/sdo_retouch/
+OUT_DIR = /Volumes/Transcend/img/sdo/
+REMOVE_LIST = /Volumes/Transcend/img/removelist.txt
 ANALYSIS_IMG_SIZE = 1024
-HIST_THRESHOLD = 0.99
+HIST_THRESHOLD = 0.98
+
+[SDO_RED]
+IMG_DIR = /Volumes/Transcend/img/sdo_red_retouch/
+OUT_DIR = /Volumes/Transcend/img/sdo_red/
+REMOVE_LIST = /Volumes/Transcend/img/removelist.txt
+ANALYSIS_IMG_SIZE = 1024
+HIST_THRESHOLD = 0.95
